# enedis_pipeline

./: .env  .gitignore  Dockerfile.airflow  GEMINI.md  backfill_2.py  bilan-electrique-schema.json  docker-compose.yaml  env.example  init-db.sql
airflow/dags/: elt_pipeline.py
airflow/plugins/: fetch_enedis.py
data_analytics/: Makefile  README.md  pyproject.toml
data_analytics/data/processed/: enedis_dataset_engineered_feature_2021.parquet  enedis_dataset_year_2021.parquet  enedis_dataset_year_2021_with_anomalies.parquet  enedis_dataset_year_2021_with_decomposition_anomalies.parquet  enedis_dataset_year_2022.parquet  enedis_dataset_year_2022_with_decomposition_anomalies.parquet  enedis_dataset_year_2023.parquet  enedis_dataset_year_2023_with_decomposition_anomalies.parquet  enedis_dataset_year_2024.parquet  enedis_dataset_year_2024_with_decomposition_anomalies.parquet  enedis_dataset_year_2025.parquet  enedis_dataset_year_2025_with_decomposition_anomalies.parquet  enedis_dataset_year_2026.parquet  enedis_dataset_year_2026_with_decomposition_anomalies.parquet
data_analytics/data/raw/: energy_prices_2021.csv  energy_prices_2022.csv  energy_prices_2023.csv  energy_prices_2024.csv  energy_prices_2025.csv  energy_prices_2026.csv
data_analytics/docs/: mkdocs.yml
data_analytics/docs/docs/: index.md
data_analytics/notebooks/: 1_data_check.ipynb  2_xgboost_hta.ipynb  3_xgboost_btsup.ipynb  4_xgboost_residentielle.ipynb  5_xgboost_professionnelle.ipynb  6_lightgbm_hta.ipynb  7_lightgbm_btsup.ipynb  8_lightgbm_residentielle.ipynb  9_lightgbm_professionnelle.ipynb  data_exploration.ipynb  data_preparation.ipynb  eda.ipynb  mlflow.db
data_analytics/notebooks/config/: matplotlib_config.py  (+4 more)
data_analytics/scripts/: decompose_and_detect_anomalies.py
data_analytics/utils/: plots.py  stats.py
data_dashboard/: Dockerfile  pyproject.toml  requirements.txt
data_dashboard/src/: app.py
data_pipeline/: .gitignore  Dockerfile.airflow
energy_analytics/: Makefile  README.md  pyproject.toml
energy_analytics/docs/: mkdocs.yml
energy_analytics/docs/docs/: index.md
energy_data_analytics/: .gitignore  Makefile  README.md  pyproject.toml
energy_data_analytics/docs/: mkdocs.yml
energy_data_analytics/docs/docs/: index.md
energy_pipeline/: Dockerfile.airflow
(+18 files in other folders)
