[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Analytics about the Enedis energy data"
authors = [
  { name = "Abdelaziz El Ouarary" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "matplotlib==3.10.0",
    "mkdocs",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "pip",
    "polars==1.35.2",
    "pytest",
    "python-dotenv",
    "ruff",
    "seaborn==0.13.2",
    "statsmodels==0.14.6",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

